# gsh

./: .editorconfig  .gitignore  BENCHMARKS_SUMMARY.md  COMMUNITY.md  COMPATIBILITY.md  Cargo.toml  LICENSE  QUIC_SUPPORT.md  README.md  install.ps1  install.sh  run_benchmarks.sh
.github/workflows/: release.yml  rust.yml
assets/: logo.pdn
benches/: Cargo.toml  README.md
benches/benches/: authentication.rs  client_server_communication.rs  concurrent_load.rs  frame_processing.rs  integration_tests.rs  server_performance.rs
benches/src/: benchmark_server.rs  lib.rs
client/: Cargo.toml  README.md
client/src/: auth.rs  client.rs  config.rs  display.rs  main.rs  network.rs  window.rs
example_server/: Cargo.toml
example_server/src/: main.rs  service.rs
examples/: README.md
examples/auth/: Cargo.toml
examples/auth/src/: main.rs
examples/colors/: Cargo.toml  README.md
examples/colors/src/: main.rs
examples/cube/: Cargo.toml  README.md
examples/cube/src/: main.rs
examples/liquid_sim/: Cargo.toml  README.md
examples/liquid_sim/src/: main.rs
examples/password_auth/: Cargo.toml
examples/password_auth/src/: main.rs
examples/quic_demo/: Cargo.toml
examples/quic_demo/src/: main.rs
examples/random_colors/: Cargo.toml
examples/random_colors/src/: main.rs  service.rs
examples/remote_desktop/: Cargo.toml  README.md
examples/remote_desktop/src/: main.rs
examples/signature_auth/: Cargo.toml  example.pem
examples/signature_auth/src/: main.rs
lib/: Cargo.toml  README.md
lib/src/: cert.rs  lib.rs
libgsh/: Cargo.toml  README.md  build.rs
libgsh/benches/: libgsh_internals.rs
libgsh/src/: cert.rs  frame.rs  lib.rs  quic.rs
libgsh/src/async/: mod.rs  quic_server.rs  server.rs  service.rs
libgsh/src/client/: handshake.rs  mod.rs
libgsh/src/server/: handshake.rs  mod.rs  server.rs  service.rs
libgsh/src/shared/: async.rs  auth.rs  cert.rs  codec.rs  frame.rs  mod.rs  protocol.proto  sync.rs
libgsh/src/simple/: mod.rs  server.rs  service.rs
shared/: Cargo.toml  README.md
shared/src/: async.rs  lib.rs  protocol.proto  sync.rs
