[package]
name = "gsh"
version = "1.0.0"
edition = "2021"

[dependencies]
libgsh = { workspace = true, features = ["client"] }
clap = { version = "4.5.35", features = ["derive"] }
webpki-roots = "0.26.8"
# Use SDL3 bindings instead of SDL2. Version may need adjustment based on available crate.
# NOTE: The SDL3 Rust binding crate and feature names may differ; if this crate name/version
# doesn't exist in your registry, update to the correct crate (for example `sdl3`, `sdl3-sys`,
# or a specific git repo). This change is the first step to migrate code to SDL3.
# Use sdl3 with a couple features enabled; adjust if you need different feature set.
sdl3 = { version = "0.16.1", features = [
	"build-from-source",
	"static-link",
	"image",
] }
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.97"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = { version = "0.26.2", features = ["ring"] }
homedir = "0.3.4"
serde = "1.0.219"
serde_json = "1.0.140"
dialoguer = "0.11.0"
rand = "0.9.1"
