[package]
name = "gsh"
version = "1.0.0"
edition = "2021"

[dependencies]
libgsh = { workspace = true }
clap = { version = "4.5.35", features = ["derive"] }
webpki-roots = "0.26.8"
sdl3 = { version = "0.17.3", features = [
	"build-from-source",
	"static-link",
	"image",
] }
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.97"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = { version = "0.26.2", features = ["ring"] }
homedir = "0.3.4"
serde = "1.0.219"
serde_json = "1.0.140"
dialoguer = "0.11.0"
rand = "0.9.1"
