[package]
name = "libgsh"
version = "0.1.1"
edition = "2021"
description = "Graphical Shell server SDK library"
license = "MIT"
categories = [
	"api-bindings",
	"gui",
	"graphics",
	"network programming",
	"asynchronous",
	"rendering",
	"virtualization",
	"visualization",
]
license-file = "../LICENSE"
repository = "https://github.com/WilliamRagstad/gsh"
documentation = "https://docs.rs/libgsh/"
im-a-teapot = false
keywords = [
	"gsh",
	"libgsh",
	"graphical shell",
	"shell",
	"server",
	"backend",
	"library",
	"SDK",
	"api",
	"protocol",
	"graphics",
	"network programming",
	"networking",
	"network",
	"asynchronous",
	"rendering",
	"virtualization",
	"visualization",
	"video",
	"audio",
	"stream",
	"streaming",
]

[dependencies]
rcgen = "0.13.2"
log = "0.4.27"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = { version = "0.26.2", features = [
	"ring",
], default-features = false }
async-trait = "0.1.88"
prost = "0.13.5"
os_info = "3.10.0"

[build-dependencies]
prost-build = "0.13.5"
