[package]
name = "libgsh"
version = "1.2.0"
edition = "2021"
description = "Graphical Shell server SDK library"
categories = [
	"rendering",
	"api-bindings",
	"gui",
	"graphics",
	"network-programming",
]
license-file = "../LICENSE"
repository = "https://github.com/WilliamRagstad/gsh"
documentation = "https://docs.rs/libgsh/"
keywords = ["graphics", "shell", "network", "gui", "server"]

[dependencies]
rsa = "0.9.8"
rcgen = "0.13.2"
log = "0.4.27"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = { version = "0.26.2", features = [
	"ring",
], default-features = false }
async-trait = "0.1.88"
prost = "0.13.5"
os_info = "3.10.0"
sha2 = { version = "0.10.9", features = ["oid"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }

[build-dependencies]
prost-build = "0.13.5"
