[package]
name = "random_colors"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }
rustls = { version = "0.23.26", features = [
	"ring",
	"std",
], default-features = false }
webpki-roots = "0.26.8"
rcgen = "0.13.2"
rand = "0.9.0"
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.97"
